--- a/Contact.css
+++ b/Contact.css
@@ -40,7 +40,7 @@ header {
 .logo {
 	font-size: 50px;
 	color: #0096e0;
-	font-family: fantasy;
+	font-family: "Playpen Sans Thai", cursive;
 	transition: color 0.3s ease;
 	text-shadow: 0px 0px 10px #0095e091;
 }
@@ -125,6 +125,31 @@ nav {
 	background: linear-gradient(to right, #0056b3, #0088cc);
 	transform: scale(0.98);
 }
+#CurrentPage {
+	position: relative;
+	border: none;
+	background-color: transparent;
+	color: #0096e0;
+	font-family: Arial, Helvetica, sans-serif;
+	font-size: 13px;
+
+	cursor: pointer;
+}
+
+#CurrentPage::after {
+	content: "";
+	position: absolute;
+	bottom: 8px; /* tam alta yasla */
+	left: 0;
+	width: 100%;
+	height: 3px;
+	background-color: #0096e0;
+	box-shadow: 0 0 5px #0096e0;
+	border-radius: 2px; /* daha yumuşak görünüm */
+}
+#CurrentPage:hover {
+	transform: translateX(0px);
+}
 /* -------------------Main---------------------------------- */
 
 main {
@@ -163,7 +188,7 @@ main {
 	text-decoration: none; /* Bağlantının altı çizili olmaması için */
 	color: #d9d9d9;
 	font-size: 20px;
-	font-family: cursive;
+	font-family: "Playpen Sans Thai", cursive;
 	transition: all 0.3s ease; /* Efektin yumuşak bir geçişle gerçekleşmesi için */
 	border-radius: 5px; /* Kutunun köşelerini yuvarlatmak için */
 }
@@ -185,6 +210,7 @@ main {
 		#cc2366,
 		#bc1888
 	);
+	background-clip: text;
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 	font-weight: bold;
