--- a/index.css
+++ b/index.css
@@ -9,6 +9,7 @@ body {
 	height: 100%;
 	margin: 0;
 	background: linear-gradient(90deg, #141414, #141414, #272727);
+	width: 100%;
 }
 .container {
 	display: flex;
@@ -301,9 +302,8 @@ main {
 	margin-bottom: 30px;
 }
 .Learning-section img {
-	height: 20px;
 	object-fit: contain;
-	max-width: 100%;
+	height: 30px;
 }
 .skills-list {
 	display: flex;
